force-app/main/default/objects/TriggerBypass__mdt/TriggerBypass__mdt.object-meta.xml
<CustomObject>
    <description>This is an example implementation of bypassing trigger action via a boolean on the trigger handler class, using Custom Metadata to store settings.</description>
    <label>Trigger Bypass</label>
    <pluralLabel>Trigger Bypasses</pluralLabel>
</CustomObject>