force-app/main/default/objects/TriggerBypass__mdt/fields/Bypass__c.field-meta.xml
<CustomField>
    <fullName>Bypass__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If True, this TriggerHandler class will be bypassed (its actions will not occur).</description>
    <inlineHelpText>If True, this TriggerHandler class will be bypassed (its actions will not occur).</inlineHelpText>
    <label>Bypass</label>
    <type>Checkbox</type>
</CustomField>