force-app/main/default/objects/TriggerBypass__mdt/fields/TriggerHandlerMethodName__c.field-meta.xml
<CustomField>
    <fullName>TriggerHandlerMethodName__c</fullName>
    <description>The name of the trigger handler and method to bypass (or not).
Recommended naming convention: [TriggerHandlerClasss].[MethodName], e.g., AccountTriggerHandler.afterUpdate
Note that this field is 255 characters, to account for a possible future change in maximum length allowed by Salesforce.</description>
    <inlineHelpText>The name of the trigger handler and method to bypass (or not).
Recommended naming convention: [TriggerHandlerClasss].[MethodName], e.g., AccountTriggerHandler.afterUpdate</inlineHelpText>
    <label>TriggerHandlerMethodName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>