force-app/main/default/objects/TriggerBypass__mdt/fields/TriggerHandlerName__c.field-meta.xml
<CustomField>
    <fullName>TriggerHandlerName__c</fullName>
    <description>The name of the trigger handler to bypass (or not). Note that this field is 255 characters, to account for a possible future change in maximum length allowed by Salesforce.</description>
    <label>TriggerHandlerName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>